fix: code cleanup and loading image as base64 to work for sites that have strict policies around https for example github.com

--- a/Natural Born Privacy Chrome Extension/manifest.json
+++ b/Natural Born Privacy Chrome Extension/manifest.json
@@ -3,7 +3,8 @@
   "description": "Make the current page unreadable unless you read it through red glasses",
   "version": "1.0",
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "background": {
     "scripts": ["background.js"],
