refactor: add loads of styles and a way to remove the style when necessary

--- a/Natural Born Privacy Chrome Extension/manifest.json
+++ b/Natural Born Privacy Chrome Extension/manifest.json
@@ -7,7 +7,8 @@
     "storage"
   ],
   "web_accessible_resources": [
-    "images/*.png"
+    "images/*.png",
+    "styles/*.css"
   ],
   "background": {
     "scripts": ["background.js"],
