refactor: add icons and remove style

--- a/Natural Born Privacy Chrome Extension/manifest.json
+++ b/Natural Born Privacy Chrome Extension/manifest.json
@@ -6,6 +6,10 @@
     "activeTab",
     "storage"
   ],
+  "icons": { 
+    "16": "images/icon.png",
+    "128": "images/icon-big.png" 
+  },
   "web_accessible_resources": [
     "images/*.png",
     "styles/*.css"
